fix(octra): buttons on 2D-editor are not accessible on small screens

--- a/apps/octra/src/app/editors/2D-editor/transcr-window/transcr-window.component.scss
+++ b/apps/octra/src/app/editors/2D-editor/transcr-window/transcr-window.component.scss
@@ -1,25 +1,7 @@
-#window {
-  position: absolute;
-  width: 95%;
-  z-index: 100;
-  padding: 10px;
-  background-color: white;
-  border-radius: 10px;
-  margin: 2.5%;
-  border: 1px solid gray;
-  -webkit-box-shadow: 10px 10px 50px grey;
-  -moz-box-shadow: 10px 10px 50px grey;
-  box-shadow: 10px 10px 50px grey;
-}
-
-#black {
-  position: absolute;
-  width: 100%;
-  display: block;
-  height: 100%;
-  z-index: 99;
-  background-color: white;
-  opacity: 0.7;
+:host {
+  display: flex;
+  flex-direction: column;
+  flex: auto;
 }
 
 .window-nav-top,
@@ -59,4 +41,10 @@
   margin-top: 150px;
   color: #adadad;
   z-index: 120;
+}
+
+octra-transcr-editor {
+  display: flex;
+  flex-direction: column;
+  flex: auto;
 }
