--- a/apps/octra/src/styles.scss
+++ b/apps/octra/src/styles.scss
@@ -480,10 +480,6 @@ a {
   cursor: pointer;
 }
 
-ngx-jodit {
-  height: 200px !important;
-}
-
 .text-outline-white {
   text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white,
     1px 1px 0 white !important;
@@ -553,5 +549,15 @@ ul.pagination.pagination-sm{
 @keyframes spin {
   100% {
     -webkit-transform: rotate(360deg);
+  }
+}
+
+.transcr-window-dialog {
+  max-width: 90% !important;
+}
+
+@media (max-width: 1200px) {
+  .transcr-window-dialog {
+    max-width: 100% !important;
   }
 }
